# swagger-ui-plugin-descope

./: .gitignore  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
example/: README.md  fastapi_descope.py  main.py  pyproject.toml
example/js/: swagger-ui-plugin-descope.js
src/: descopeAuthorizationPopup.jsx  swagger-ui-plugin-descope.tsx
