[tool.poetry]
name = "fastapi_descope_auth"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.22.0"
pydantic = {version = "^2.1.0", extras = ["dotenv"]}
descope = "^1.5.6"

requires = ["poetry-core>=1.0.0"]
